# docify

./: .env.example  .env.local.example  .gitignore  CLAUDE.md  README.md  concept.md  docker-compose.infra.yml  docker-compose.yml  plan.md
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/api/: response.py
backend/api/routes/: graph.py  query.py  status.py  upload.py
backend/chunkers/: hierarchical.py
backend/extractors/: community.py  graph_extractor.py  schema_detector.py
backend/parsers/: document.py
backend/stores/: cypher_generator.py  embeddings.py  llm.py  neo4j_store.py  postgres.py  qdrant_store.py
backend/workers/: celery_app.py  tasks.py
frontend/: package.json
frontend/app/: layout.tsx
frontend/app/(shell)/: layout.tsx
frontend/app/(shell)/chat/: page.tsx
frontend/app/(shell)/documents/: page.tsx
frontend/app/(shell)/graph/: page.tsx
frontend/app/(shell)/upload/: page.tsx
frontend/components/: chat.tsx  graph-view.tsx  sidebar.tsx  upload-zone.tsx
frontend/lib/: api.ts
